create github pages

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
-  <meta name="description" content="">
+  <link rel="shortcut icon" href="assets/images/logo-color75-75x91.png" type="image/x-icon">
+  <meta name="description" content="Ultimate Cold Marketing Prospeting Tool">
   
-  <title>Home</title>
+  <title>Leads & Sales</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -49,8 +49,8 @@
                     <a href="tel:+1-516-517-0196"><strong>516-517-0196</strong></a>
                 </h3>
                 
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="http://press1cashcow.com">
-                        <span class="mbr-iconfont mbri-file"></span>Press1CashCow.com</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success display-5" href="http://press1cashcow.com"><span class="mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>
+                        Press1CashCow.com</a></div>
             </div>
         </div>
     </div>
