--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-2">AUTOMATED A.I. SYSTEM</h1>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-2">AUTOMATED<br>A.I. SYSTEM</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     <a href="tel:+1-516-517-0196"><strong>516-517-0196</strong></a>
                 </h3>
                 
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success display-2" href="http://press1cashcow.com">
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success display-1" href="http://press1cashcow.com">
                         PRESS1CASHCOW.COM</a></div>
             </div>
         </div>
