create github pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-2">AUTOMATED<br>A.I. SYSTEM</h1>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-2">AUTOMATED A.I.<br>SYSTEM</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     <a href="tel:+1-516-517-0196"><strong>516-517-0196</strong></a>
                 </h3>
