--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <figure class="mbr-figure align-center">
         <div class="video-block" style="width: 80%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/joiWM8cRvf8?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/1Nz8H2ncqpE?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
@@ -48,7 +48,7 @@
                     <a href="tel:+1-516-517-0196"><strong>516-517-0196</strong></a>
                 </h3>
                 
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-success display-1" href="http://press1cashcow.com">
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-warning display-1" href="http://press1cashcow.com">
                         PRESS1CASHCOW.COM</a></div>
             </div>
         </div>
