create github pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo-color755-75x911.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo-color755-75x912.png" type="image/x-icon">
   <meta name="description" content="Ultimate Cold Marketing Prospeting Tool">
   
   <title>Leads & Sales</title>
@@ -82,7 +82,7 @@
     
     <figure class="mbr-figure align-center">
         <div class="video-block" style="width: 80%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/joiWM8cRvf8?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/joiWM8cRvf8?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=joiWM8cRvf8" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
